// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — anomaly (role-based) > Anomaly: Aurora(Caster) vs Rammus 1`] = `
{
  "duration": 17.9667,
  "logCounts": {
    "ability": 3,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Aurora(Caster) vs Rammus",
  "seed": 7,
  "snapshotCount": 541,
  "units": [
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 1,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1341.9,
      "totalDamageTaken": 1271.04,
    },
    {
      "alive": true,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 998.1,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1271.04,
      "totalDamageTaken": 1341.9,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — anomaly (role-based) > Anomaly: Briar(Fighter) vs Illaoi 1`] = `
{
  "duration": 16.3,
  "logCounts": {
    "ability": 6,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Briar(Fighter) vs Illaoi",
  "seed": 7,
  "snapshotCount": 491,
  "units": [
    {
      "alive": true,
      "attackCount": 16,
      "castCount": 4,
      "championApi": "TFT17_Briar",
      "finalHp": 539.81,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2310.72,
      "totalDamageTaken": 900.93,
    },
    {
      "alive": false,
      "attackCount": 11,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 900.93,
      "totalDamageTaken": 2310.72,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — anomaly (role-based) > Anomaly: Jinx(Marksman) vs Rammus 1`] = `
{
  "duration": 13.3667,
  "logCounts": {
    "ability": 4,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Jinx(Marksman) vs Rammus",
  "seed": 7,
  "snapshotCount": 403,
  "units": [
    {
      "alive": false,
      "attackCount": 18,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2006.12,
      "totalDamageTaken": 1090,
    },
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 333.88,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1090,
      "totalDamageTaken": 2006.12,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — anomaly (role-based) > Anomaly: Rammus(Tank) vs Jinx 1`] = `
{
  "duration": 16.4667,
  "logCounts": {
    "ability": 1,
    "attack": 23,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Rammus(Tank) vs Jinx",
  "seed": 7,
  "snapshotCount": 496,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 2121.38,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 3440,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1044,
      "totalDamageTaken": 1318.62,
    },
    {
      "alive": false,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1318.62,
      "totalDamageTaken": 1044,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — anomaly specialist (star orbit) > Anomaly: Gnar(Specialist) vs Rammus 1`] = `
{
  "duration": 5.5333,
  "logCounts": {
    "ability": 11,
    "attack": 13,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Anomaly: Gnar(Specialist) vs Rammus",
  "seed": 7,
  "snapshotCount": 168,
  "units": [
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 11,
      "championApi": "TFT17_Gnar",
      "finalHp": 738,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2453.75,
      "totalDamageTaken": 252,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 252,
      "totalDamageTaken": 2453.75,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — basic > 1v1 Briar mirror (대칭) 1`] = `
{
  "duration": 16.3,
  "logCounts": {
    "ability": 6,
    "attack": 31,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Briar mirror (대칭)",
  "seed": 42,
  "snapshotCount": 491,
  "units": [
    {
      "alive": true,
      "attackCount": 16,
      "castCount": 4,
      "championApi": "TFT17_Briar",
      "finalHp": 39.1,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 650,
      "starLevel": 1,
      "team": "player",
      "totalDamageDealt": 743.7,
      "totalDamageTaken": 697.04,
    },
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 3,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 650,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 697.04,
      "totalDamageTaken": 743.7,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — basic > 1v1 Jinx+IE vs Briar (단일 스탯 아이템) 1`] = `
{
  "duration": 7.7333,
  "logCounts": {
    "ability": 2,
    "attack": 12,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "1v1 Jinx+IE vs Briar (단일 스탯 아이템)",
  "seed": 42,
  "snapshotCount": 234,
  "units": [
    {
      "alive": true,
      "attackCount": 6,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 504,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1817.2,
      "totalDamageTaken": 486,
    },
    {
      "alive": false,
      "attackCount": 6,
      "castCount": 1,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 486,
      "totalDamageTaken": 1817.2,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — basic > 2v2 Akali+Jinx vs Belveth+Illaoi 1`] = `
{
  "duration": 18.0333,
  "logCounts": {
    "ability": 11,
    "attack": 50,
    "death": 3,
    "move": 16,
  },
  "scenarioName": "2v2 Akali+Jinx vs Belveth+Illaoi",
  "seed": 1337,
  "snapshotCount": 543,
  "units": [
    {
      "alive": false,
      "attackCount": 10,
      "castCount": 3,
      "championApi": "TFT17_Akali",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 799.84,
      "totalDamageTaken": 1458.37,
    },
    {
      "alive": false,
      "attackCount": 14,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-1",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2235.33,
      "totalDamageTaken": 1020.4,
    },
    {
      "alive": true,
      "attackCount": 18,
      "castCount": 3,
      "championApi": "TFT17_Belveth",
      "finalHp": 551.47,
      "id": "enemy-0",
      "killCount": 2,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1834.46,
      "totalDamageTaken": 940.41,
    },
    {
      "alive": false,
      "attackCount": 8,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 644.31,
      "totalDamageTaken": 2094.77,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Akali+Bloodthirster vs Illaoi 1`] = `
{
  "duration": 16.5,
  "logCounts": {
    "ability": 7,
    "attack": 29,
    "death": 1,
    "move": 11,
  },
  "scenarioName": "Akali+Bloodthirster vs Illaoi",
  "seed": 7,
  "snapshotCount": 497,
  "units": [
    {
      "alive": true,
      "attackCount": 18,
      "castCount": 6,
      "championApi": "TFT17_Akali",
      "finalHp": 1113.15,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2091.33,
      "totalDamageTaken": 835.9,
    },
    {
      "alive": false,
      "attackCount": 11,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 835.9,
      "totalDamageTaken": 2091.33,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Aurora+Rabadon vs Rammus 1`] = `
{
  "duration": 17.9667,
  "logCounts": {
    "ability": 3,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+Rabadon vs Rammus",
  "seed": 7,
  "snapshotCount": 541,
  "units": [
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 1,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1808.66,
      "totalDamageTaken": 1271.04,
    },
    {
      "alive": true,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 531.34,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1271.04,
      "totalDamageTaken": 1808.66,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Belveth+Deathblade vs Briar 1`] = `
{
  "duration": 7.6,
  "logCounts": {
    "ability": 2,
    "attack": 13,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Belveth+Deathblade vs Briar",
  "seed": 42,
  "snapshotCount": 230,
  "units": [
    {
      "alive": true,
      "attackCount": 7,
      "castCount": 1,
      "championApi": "TFT17_Belveth",
      "finalHp": 1084.08,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1242.6,
      "totalDamageTaken": 402.21,
    },
    {
      "alive": false,
      "attackCount": 6,
      "castCount": 1,
      "championApi": "TFT17_Briar",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 402.21,
      "totalDamageTaken": 1242.6,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Briar+Titans vs Jinx 1`] = `
{
  "duration": 5.0667,
  "logCounts": {
    "ability": 2,
    "attack": 14,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Briar+Titans vs Jinx",
  "seed": 101,
  "snapshotCount": 154,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 2,
      "championApi": "TFT17_Briar",
      "finalHp": 1038.19,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1030.62,
      "totalDamageTaken": 255.48,
    },
    {
      "alive": false,
      "attackCount": 4,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 255.48,
      "totalDamageTaken": 1030.62,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Fiora+Quicksilver vs Rammus 1`] = `
{
  "duration": 5.6,
  "logCounts": {
    "ability": 2,
    "attack": 21,
    "death": 1,
    "move": 8,
  },
  "scenarioName": "Fiora+Quicksilver vs Rammus",
  "seed": 7,
  "snapshotCount": 170,
  "units": [
    {
      "alive": true,
      "attackCount": 18,
      "castCount": 2,
      "championApi": "TFT17_Fiora",
      "finalHp": 2155.03,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 2160,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2388,
      "totalDamageTaken": 196.36,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 196.36,
      "totalDamageTaken": 2388,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Illaoi+BrambleVest+Archangels vs Akali (혼합 경로) 1`] = `
{
  "duration": 24.2,
  "logCounts": {
    "ability": 11,
    "attack": 43,
    "death": 1,
    "move": 15,
  },
  "scenarioName": "Illaoi+BrambleVest+Archangels vs Akali (혼합 경로)",
  "seed": 5,
  "snapshotCount": 728,
  "units": [
    {
      "alive": false,
      "attackCount": 16,
      "castCount": 1,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1304.53,
      "totalDamageTaken": 2239.77,
    },
    {
      "alive": true,
      "attackCount": 27,
      "castCount": 9,
      "championApi": "TFT17_Akali",
      "finalHp": 314.24,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 1350,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 2239.77,
      "totalDamageTaken": 1304.53,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — combined items > Jinx+Guinsoos vs Illaoi 1`] = `
{
  "duration": 4.4667,
  "logCounts": {
    "ability": 2,
    "attack": 17,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Guinsoos vs Illaoi",
  "seed": 101,
  "snapshotCount": 136,
  "units": [
    {
      "alive": true,
      "attackCount": 15,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 780,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2007.87,
      "totalDamageTaken": 210,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 210,
      "totalDamageTaken": 2007.87,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — combined items > Jinx+IE+Deathblade vs Illaoi (누적 StatPatch) 1`] = `
{
  "duration": 7.7333,
  "logCounts": {
    "ability": 1,
    "attack": 10,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+IE+Deathblade vs Illaoi (누적 StatPatch)",
  "seed": 11,
  "snapshotCount": 234,
  "units": [
    {
      "alive": true,
      "attackCount": 6,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 690,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2531.97,
      "totalDamageTaken": 300,
    },
    {
      "alive": false,
      "attackCount": 4,
      "castCount": 0,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 300,
      "totalDamageTaken": 2531.97,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Aurora+EmpathicImplant vs Rammus (Timer mana) 1`] = `
{
  "duration": 17.9667,
  "logCounts": {
    "ability": 3,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+EmpathicImplant vs Rammus (Timer mana)",
  "seed": 7,
  "snapshotCount": 541,
  "units": [
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 1,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1336.5,
      "totalDamageTaken": 1271.04,
    },
    {
      "alive": true,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1003.5,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1271.04,
      "totalDamageTaken": 1336.5,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+ChemicalCapacitor vs Rammus (armor shred) 1`] = `
{
  "duration": 4.8667,
  "logCounts": {
    "ability": 2,
    "attack": 19,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+ChemicalCapacitor vs Rammus (armor shred)",
  "seed": 7,
  "snapshotCount": 148,
  "units": [
    {
      "alive": true,
      "attackCount": 17,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 954.03,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 2420.85,
      "totalDamageTaken": 180,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 180,
      "totalDamageTaken": 2420.85,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+Semiconductor vs Rammus (Counter) 1`] = `
{
  "duration": 17.9667,
  "logCounts": {
    "ability": 4,
    "attack": 26,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Semiconductor vs Rammus (Counter)",
  "seed": 7,
  "snapshotCount": 541,
  "units": [
    {
      "alive": false,
      "attackCount": 14,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1190,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1715.75,
      "totalDamageTaken": 1216,
    },
    {
      "alive": true,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 624.25,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1216,
      "totalDamageTaken": 1715.75,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+Semiconductor(Radiant) vs Rammus 1`] = `
{
  "duration": 19.5,
  "logCounts": {
    "ability": 4,
    "attack": 29,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Jinx+Semiconductor(Radiant) vs Rammus",
  "seed": 7,
  "snapshotCount": 587,
  "units": [
    {
      "alive": false,
      "attackCount": 16,
      "castCount": 2,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1290,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1635.31,
      "totalDamageTaken": 1306,
    },
    {
      "alive": true,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 704.69,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1306,
      "totalDamageTaken": 1635.31,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — psyops (counter + timer) > Jinx+Targetlock 2v2 (per-target first hit) 1`] = `
{
  "duration": 7.7667,
  "logCounts": {
    "ability": 5,
    "attack": 37,
    "death": 2,
    "move": 11,
  },
  "scenarioName": "Jinx+Targetlock 2v2 (per-target first hit)",
  "seed": 7,
  "snapshotCount": 235,
  "units": [
    {
      "alive": true,
      "attackCount": 30,
      "castCount": 4,
      "championApi": "TFT17_Jinx",
      "finalHp": 375,
      "id": "player-0",
      "killCount": 2,
      "maxHp": 990,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 4754.87,
      "totalDamageTaken": 615,
    },
    {
      "alive": false,
      "attackCount": 4,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 360,
      "totalDamageTaken": 2730.03,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Illaoi",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 255,
      "totalDamageTaken": 2024.84,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > MasterYi(PsyOps)+ChemicalRadiant 2v2 (cleave) 1`] = `
{
  "duration": 5.1,
  "logCounts": {
    "ability": 2,
    "attack": 18,
    "death": 2,
    "move": 9,
  },
  "scenarioName": "MasterYi(PsyOps)+ChemicalRadiant 2v2 (cleave)",
  "seed": 7,
  "snapshotCount": 155,
  "units": [
    {
      "alive": true,
      "attackCount": 11,
      "castCount": 2,
      "championApi": "TFT17_MasterYi",
      "finalHp": 1980,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 1980,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1359.04,
      "totalDamageTaken": 203.76,
    },
    {
      "alive": false,
      "attackCount": 4,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 550,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 134.67,
      "totalDamageTaken": 630.18,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 700,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 69.09,
      "totalDamageTaken": 728.87,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Pyke(PsyOps)+TargetlockRadiant 2v2 (on_kill heal) 1`] = `
{
  "duration": 3.8333,
  "logCounts": {
    "ability": 2,
    "attack": 10,
    "death": 2,
    "move": 10,
  },
  "scenarioName": "Pyke(PsyOps)+TargetlockRadiant 2v2 (on_kill heal)",
  "seed": 7,
  "snapshotCount": 117,
  "units": [
    {
      "alive": true,
      "attackCount": 5,
      "castCount": 1,
      "championApi": "TFT17_Pyke",
      "finalHp": 1260,
      "id": "player-0",
      "killCount": 2,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1467,
      "totalDamageTaken": 164.97,
    },
    {
      "alive": false,
      "attackCount": 3,
      "castCount": 0,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 550,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 115.31,
      "totalDamageTaken": 562.5,
    },
    {
      "alive": false,
      "attackCount": 2,
      "castCount": 0,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "enemy-1",
      "killCount": 0,
      "maxHp": 700,
      "starLevel": 1,
      "team": "enemy",
      "totalDamageDealt": 49.66,
      "totalDamageTaken": 904.5,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Rammus+GrenadeMod vs Jinx (Timer heal) 1`] = `
{
  "duration": 16.4667,
  "logCounts": {
    "ability": 2,
    "attack": 23,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Rammus+GrenadeMod vs Jinx (Timer heal)",
  "seed": 7,
  "snapshotCount": 496,
  "units": [
    {
      "alive": true,
      "attackCount": 10,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1641.25,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 2590,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1044,
      "totalDamageTaken": 1318.62,
    },
    {
      "alive": false,
      "attackCount": 13,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1318.62,
      "totalDamageTaken": 1044,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Rammus+Semiconductor vs Jinx (on_hit_taken counter) 1`] = `
{
  "duration": 14.9333,
  "logCounts": {
    "ability": 1,
    "attack": 21,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Rammus+Semiconductor vs Jinx (on_hit_taken counter)",
  "seed": 7,
  "snapshotCount": 450,
  "units": [
    {
      "alive": true,
      "attackCount": 9,
      "castCount": 0,
      "championApi": "TFT17_Rammus",
      "finalHp": 1308,
      "id": "player-0",
      "killCount": 1,
      "maxHp": 2540,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1091.25,
      "totalDamageTaken": 1232,
    },
    {
      "alive": false,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Jinx",
      "finalHp": 0,
      "id": "enemy-0",
      "killCount": 0,
      "maxHp": 990,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1232,
      "totalDamageTaken": 1091.25,
    },
  ],
  "winner": "player",
}
`;

exports[`golden — psyops (counter + timer) > Viktor(PsyOps)+DroneRadiant vs Rammus 1`] = `
{
  "duration": 17.9667,
  "logCounts": {
    "ability": 3,
    "attack": 27,
    "death": 1,
    "move": 6,
    "status_expire": 1,
  },
  "scenarioName": "Viktor(PsyOps)+DroneRadiant vs Rammus",
  "seed": 7,
  "snapshotCount": 541,
  "units": [
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 1,
      "championApi": "TFT17_Viktor",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1170,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 875.23,
      "totalDamageTaken": 1271.04,
    },
    {
      "alive": true,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 1464.77,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1271.04,
      "totalDamageTaken": 875.23,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — timer (drone uplink) > Aurora+DroneUplink vs Rammus (Timer) 1`] = `
{
  "duration": 17.9667,
  "logCounts": {
    "ability": 3,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+DroneUplink vs Rammus (Timer)",
  "seed": 7,
  "snapshotCount": 541,
  "units": [
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 1,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1531.41,
      "totalDamageTaken": 1271.04,
    },
    {
      "alive": true,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 808.59,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1271.04,
      "totalDamageTaken": 1531.41,
    },
  ],
  "winner": "enemy",
}
`;

exports[`golden — timer (drone uplink) > Aurora+RadiantDrone vs Rammus 1`] = `
{
  "duration": 17.9667,
  "logCounts": {
    "ability": 3,
    "attack": 27,
    "death": 1,
    "move": 6,
  },
  "scenarioName": "Aurora+RadiantDrone vs Rammus",
  "seed": 7,
  "snapshotCount": 541,
  "units": [
    {
      "alive": false,
      "attackCount": 15,
      "castCount": 1,
      "championApi": "TFT17_Aurora",
      "finalHp": 0,
      "id": "player-0",
      "killCount": 0,
      "maxHp": 1260,
      "starLevel": 2,
      "team": "player",
      "totalDamageDealt": 1610.72,
      "totalDamageTaken": 1271.04,
    },
    {
      "alive": true,
      "attackCount": 12,
      "castCount": 1,
      "championApi": "TFT17_Rammus",
      "finalHp": 729.28,
      "id": "enemy-0",
      "killCount": 1,
      "maxHp": 2340,
      "starLevel": 2,
      "team": "enemy",
      "totalDamageDealt": 1271.04,
      "totalDamageTaken": 1610.72,
    },
  ],
  "winner": "enemy",
}
`;
